# DIO-backend-python

./: 21-dictionaries.py
module_01/: 03-converting_types.py  06-comparison_operators.py  07-assignment_operators.py  08-logical_operators.py  11-indention_and_blocks.py  12-conditional_structure.py  13-loop_structure.py  14-modify_string.py  16-slicing_strings.py  17-multiple_lines_strings.py  20-tuples.py  22-dictionaries_methods.py
module_01/23-version_control_with_git_and_github/: 00-atividade_README.md  01-introduction.md  02-git.md  03-github.md  04-creating_and_cloning_repos.md  05-saving_local_changes.md  06-undo_local_changes.md  07-pull_push.md  08-branches.md
module_02/01-functions/: 01-function_1.py  02-function_return.py  03-arguments.py  04-args_kwargs.py  05-special_parameters.py  06-first_class_objects.py  07-scope.py
module_02/02-bank_challenge/: challenge.py
module_02/03-decorators_iterators_generators/: 01-inner_function.py  02-return_inner_function.py  03-first_decorator.py  04-decorator_with_syntactic_sugar.py  05-decorators_with_args.py  (+3 more)
module_02/06-package_management/: 01-introduction.md  02-pipenv.md  03-poetry.md  04-good_practices.md  pyproject.toml
module_1/: 02-var_and_const.py  04-input_and_output.py  05-arithmetic_operators.py  09-identity_operators.py  1-data_types.py  10-membership_operators.py  15-format-string.py  18-lists.py  19-list_methods.py  3-converting_types.py  4-input_and_output.py  5-arithmetic_operators.py  6-comparison_operators.py  7-assignment_operators.py  8-logical_operators.py  9-identity_operators.py
(+31 files in other folders)
