[project]
name = "06-package-management"
version = "0.1.0"
description = "Estudando ambientes virtuais e gerenciamento de dependencias com poetry !!"
authors = [
    {name = "whosmitri",email = "hellomitrii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
